--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="#about">About Us</a> 
               </li> 
               <li class="nav-item"> 
-                <a class="nav-link" href="#social">Contact Us</a> 
+                <a class="nav-link" href="#">Contact Us</a> 
               </li> 
             </ul> 
           </div> 
@@ -241,10 +241,7 @@
         </div> 
       </section> 
     </section> 
-  
-    <!-- Optional JavaScript; choose one of the two! -->
-  
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous">
     </script> 
